--- a/R-package/targeted/README.org
+++ b/R-package/targeted/README.org
@@ -10,7 +10,7 @@
 
 #+HTML: <a href="https://travis-ci.org/kkholst/targeted"><img src="https://travis-ci.org/kkholst/targeted.svg?branch=master"></a>
 #+HTML: <a href="https://codecov.io/github/kkholst/targeted?branch=master"><img src="https://codecov.io/github/kkholst/targeted/coverage.svg?branch=master"></a>
-#+HTML: <a href="http://cran.rstudio.com/web/packages/targeted/index.html"><img src="http://www.r-pkg.org/badges/version/targeted"></a>
+#+HTML: <a href="https://cran.r-project.org/package=targeted"><img src="http://www.r-pkg.org/badges/version/targeted"></a>
 #+HTML: <a href="http://cranlogs.r-pkg.org/downloads/total/last-month/targeted"><img src="http://cranlogs.r-pkg.org/badges/targeted"></a>
 #+HTML: <a href=""https://opensource.org/licenses/Apache-2.0"><img src="https://img.shields.io/badge/License-Apache%202.0-blue.svg"></a>
 
