--- a/R-package/targeted/vignettes/riskregression.Rmd
+++ b/R-package/targeted/vignettes/riskregression.Rmd
@@ -234,7 +234,7 @@ a model for the exposure \(E(A=1\mid V)\) (propensity model). The double-robustn
 stems from the fact that the this estimator remains consistent in the
 union model where either the odds-product model or the propensity
 model is correctly specified. With both models correctly specified the
-estimator asymptomatically attains the semi-parametric efficiency bounds.
+estimator is efficient.
 
 ```{r}
 with(d, riskreg_fit(y, a, target=x1, nuisance=x2, propensity=x2, type="rr"))
