--- a/R-package/targeted/vignettes/riskregression.Rmd
+++ b/R-package/targeted/vignettes/riskregression.Rmd
@@ -2,7 +2,14 @@
 title: "Estimating a relative risk or risk difference with a binary exposure"
 author: Klaus Kähler Holst
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output:
+  knitr:::html_vignette:
+    toc: true
+    css: custom.css
+    fig_caption: yes
+  pdf_document:
+    highlight: null
+    number_sections: yes
 vignette: >
   %\VignetteIndexEntry{riskregression}
   %\VignetteEngine{knitr::rmarkdown}
