--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 #-*- mode: org -*-
 
+* Version 0.1.1    <2020-05-19 Wed>
+  - Maintenance release.
+
 * Version 0.1.0    <2020-04-15 Wed>
   - Initialization of the new package 'targeted' with implementation
     of augmented inverse probability weighting methods for estimation
