--- a/doc/source/r/quickstart.org
+++ b/doc/source/r/quickstart.org
@@ -3,7 +3,7 @@
 #+PROPERTY: header-args:R :session *R* :cache no :width 550 :height 450
 #+PROPERTY: header-args:R+ :colnames yes :rownames no :hlines yes
 #+PROPERTY: header-args :eval never-export :exports both :results output :tangle yes :comments yes
-#+OPTIONS:  :author nil
+#+OPTIONS:  author:nil
 
 * Quickstart
   :PROPERTIES:
@@ -12,43 +12,56 @@
 
 
 #+BEGIN_SRC R
-summary(lm(Sepal.Length ~ Petal.Length, iris))
+m <- lvm(y ~ a+x, a~x)
+distribution(m,~ a+y) <- binomial.lvm()
+d <- sim(m,1e3,seed=1)
+
+head(d)
+#+END_SRC
+
+#+RESULTS:
+:   y a          x
+: 1 0 1 -0.6264538
+: 2 1 0  0.1836433
+: 3 1 1 -0.8356286
+: 4 1 1  1.5952808
+: 5 0 1  0.3295078
+: 6 1 0 -0.8204684
+
+
+#+BEGIN_SRC R
+library(targeted)
+
+a <- ace(y ~ a, nuisance=~x, data=d)
+summary(a)
 #+END_SRC
 
 #+RESULTS:
 #+begin_example
 
-Call:
-lm(formula = Sepal.Length ~ Petal.Length, data = iris)
+Augmented Inverse Probability Weighting estimator
+  Response y (Outcome model: logistic regression):
+	 y ~ x
+  Exposure a (Propensity model: logistic regression):
+	 a ~ x
 
-Residuals:
-     Min       1Q   Median       3Q      Max
--1.24675 -0.29657 -0.01515  0.27676  1.00269
+                  Estimate Std.Err    2.5%   97.5%    P-value
+ a=0               0.48506 0.02626  0.4336  0.5365  3.458e-76
+ a=1               0.67794 0.02225  0.6343  0.7215 6.005e-204
+Outcome model:
+ (Intercept)       0.44427 0.07306  0.3011  0.5875  1.196e-09
+ x                 1.06929 0.08537  0.9020  1.2366  5.408e-36
+Propensity model:
+ (Intercept)       0.06214 0.09258 -0.1193  0.2436  5.021e-01
+ x                -0.92905 0.15311 -1.2291 -0.6289  1.297e-09
 
-Coefficients:
-             Estimate Std. Error t value Pr(>|t|)
-(Intercept)   4.30660    0.07839   54.94   <2e-16 ***
-Petal.Length  0.40892    0.01889   21.65   <2e-16 ***
----
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
+Average Causal Effect (constrast: 'a=0' vs. 'a=1'):
 
-Residual standard error: 0.4071 on 148 degrees of freedom
-Multiple R-squared:   0.76,	Adjusted R-squared:  0.7583
-F-statistic: 468.6 on 1 and 148 DF,  p-value: < 2.2e-16
+   Estimate Std.Err    2.5%   97.5%   P-value
+RR   0.7155 0.04356  0.6301  0.8009 1.259e-60
+OR   0.4475 0.06268  0.3246  0.5703 9.383e-13
+RD  -0.1929 0.03295 -0.2575 -0.1283 4.791e-09
 #+end_example
-
-#+NAME:  testfig
-#+BEGIN_SRC R :exports results :results output graphics :file testfig.png
-plot(1:10)
-#+END_SRC
-
-#+RESULTS: testfig
-
-#+CAPTION: ... label:fig:testfig
-#+ATTR_LATEX: :width 10cm :options :center t
-#+RESULTS:
-[[file:testfig.png]]
-
 
 #+BEGIN_note
 This document is work in progress
@@ -65,3 +78,15 @@ This document is work in progress.
 #+BEGIN_warning
 This document is work in progress.
 #+END_warning
+
+#+NAME:  testfig
+#+BEGIN_SRC R :exports results :results output graphics :file testfig.png
+plot(1:10, pch=16)
+#+END_SRC
+
+#+RESULTS: testfig
+
+#+CAPTION: ...
+#+ATTR_LATEX: :width 10cm :options :center t
+#+RESULTS:
+[[file:testfig.png]]
