--- a/R-package/targeted/README.Rmd
+++ b/R-package/targeted/README.Rmd
@@ -24,6 +24,13 @@ knitr::opts_chunk$set(
 
 # Targeted Inference in R: targeted <a href='https://target.readthedocs.io/en/latest/r/index.html'><img src='man/figures/logo.svg' align="right" height="75" /></a>
 
+Various methods for targeted and semiparametric inference including
+augmented inverse probability weighted estimators for missing data and
+causal inference (Bang and Robins (2005)
+<doi:10.1111/j.1541-0420.2005.00377.x>) and estimators for risk
+differences and relative risks (Richardson et al. (2017)
+<doi:10.1080/01621459.2016.1192546>).
+
 ## Installation
 
 You can install the released version of targeted from [CRAN](<https://CRAN.R-project.org>) with:
