--- a/vignettes/riskregression.Rmd
+++ b/vignettes/riskregression.Rmd
@@ -6,7 +6,7 @@ output:
   knitr:::html_vignette:
     fig_caption: yes
 vignette: >
-  %\VignetteIndexEntry{riskregression}
+  %\VignetteIndexEntry{Estimating a relative risk or risk difference with a binary exposure}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
