--- a/R-package/targeted/README.Rmd
+++ b/R-package/targeted/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 
-# Targeted Inference in R: targeted <a href="https://targetlib.org/r/"><img src="man/figures/logo.svg" align="right" height="75" /></a>
+# Targeted Inference in R: targeted <a href="https://www.targetlib.org/r/"><img src="man/figures/logo.svg" align="right" height="75" /></a>
 
 Various methods for targeted and semiparametric inference including
 augmented inverse probability weighted estimators for missing data and
