--- a/R-package/targeted/vignettes/multiclasspred.Rmd
+++ b/R-package/targeted/vignettes/multiclasspred.Rmd
@@ -65,12 +65,8 @@ scoring(dat[[2]]$Species, pr3)
 
 rf_pred <- function(x, newdata, ...) predict(x, newdata)$prediction
 ml_grf <- ml_model$new(~., info="grf::regression_forest",
-                       fit=grf::probability_forest(X=x,Y=y,...)
+                       fit=function(x,y) grf::regression_forest(X=x,Y=y,...),
                        pred=rf_pred)
-ml_grf_multiclass <- ml_model$new(~., info="grf::probability_forest",
-                                  fit=grf::probability_forest(X=x,Y=y,...)
-                                  pred=rf_pred)
-
 x <- ml_grf$clone()
 x$update(Sepal.Length ~ .)
 x$estimate(iris)
@@ -88,35 +84,11 @@ scoring(dat[[2]]$Species, pr3)
 Cross validation - model comparison
 -------------------------------------
 
-```{r tuning}
-rf_model <- function(...) {
-  dots <- list(...)
-  fit <- function(data)
-    do.call(ranger, c(dots, list(data=data, num.threads=1)))
-  pred <- function(fit, newdata)
-    predict(fit, data=newdata, num.threads=1)$predictions
-  list(fit=fit, predict=pred)
-}
-
-lm_model <- function(...) {
-  list(function(data) lm(..., data=data))
-}
-```
-
-Continuous response
-```{r}
-library(ranger)
-models <- list(rf=rf_model(formula=Sepal.Length ~ .),
-               lm=lm_model(Sepal.Length ~ .))
-a <- cv(models, data=iris, response="Sepal.Length")
-a
-```
 
 ```{r}
 rf_model <- ml_model$new(Sepal.Length ~ .,
                   fit=function(x,y) grf::regression_forest(X=x,Y=y,...),
                   pred=function(...) predict(...)$predictions)
-
 lm_model <- ml_model$new(Sepal.Length ~ ., fit=lm)
 
 a <- cv(list(lm=lm_model, rf=rf_model), data=iris, response="Sepal.Length")
@@ -163,9 +135,13 @@ m$predict(dd)
 
 Categorical response
 ```{r tuning2}
-models <- list(rf=rf_model(Species ~ ., probability=TRUE),
-               nb=list(function(data, ...) NB(Species ~ ., data=data)))
-a <- cv(models, data=iris, response="Species")
+rf <- function(formula, ...)
+  ml_model$new(formula, info="grf::probability_forest",
+               fit=function(x,y, ...) grf::probability_forest(X=x, Y=y, ...),
+               pred=function(fit, newdata) predict(fit, newdata)$predictions, ...)
+models <- list(rf=rf(Species ~ .),
+               nb=function(data, ...) NB(Species ~ ., data=data))
+a <- cv(models, data=iris)
 a
 ```
 
@@ -173,13 +149,40 @@ Model tuning
 -----------------------
 
 ```{r modeltuning}
-args <- expand.list(num.trees=c(100,200,300,400,500), mtry=1:3,
-                    formula=Species ~ ., probability=TRUE)
-models <- lapply(args, function(par) do.call(rf_model, par))
 
-a <- cv(models, data=iris, response="Species")
+rf <- function(formula, ...)
+  ml_model$new(formula, info="grf::probability_forest",
+               fit=function(x,y, ...) grf::probability_forest(X=x, Y=y, ...),
+               pred=function(fit, newdata) predict(fit, newdata)$predictions, ...)
 
+args <- expand.list(num.trees=c(50, 100,200,300,400,500), mtry=1:3,
+                    formula=Species ~ .)
+models <- lapply(args, function(par) do.call(rf, par))
+
+
+x <- models[[1]]$clone()
+x$estimate(iris)
+
+x$.__enclos_env__$private$formula
+
+
+rtarget
+
+x <- ml_model$new(Species ~ ., info="grf::probability_forest",
+             fit=function(x,y, ...) grf::probability_forest(X=x, Y=y, ...),
+             num.trees=100, mtry=1)
+x$estimate(iris)
+
+
+a <- targeted::cv(models, data=iris)
 cbind(coef(a), attr(args, "table")[,1:2])
+
+## library(GPareto)
+## dom <- t(nondominated_points(t(coef(a))))
+## plot(coef(a))
+## plotParetoEmp(dom, col="red")
+## mp <- rbind(coef(a)[cbind(coef(a, min=TRUE),1:2)])
+## points(mp, pch=16)
 
 ```
 
