--- a/R-package/targeted/vignettes/multiclasspred.Rmd
+++ b/R-package/targeted/vignettes/multiclasspred.Rmd
@@ -155,8 +155,8 @@ rf <- function(formula, ...)
                fit=function(x,y, ...) grf::probability_forest(X=x, Y=y, ...),
                pred=function(fit, newdata) predict(fit, newdata)$predictions, ...)
 
-args <- expand.list(num.trees=c(50, 100,200,300,400,500), mtry=1:3,
-                    formula=Species ~ .)
+args <- expand.list(num.trees=c(50,100,200,300,400,500), mtry=1:3,
+                    formula=c(Species ~ ., Species ~ Sepal.Length + Sepal.Width))
 models <- lapply(args, function(par) do.call(rf, par))
 
 
