--- a/R-package/targeted/README.Rmd
+++ b/R-package/targeted/README.Rmd
@@ -11,9 +11,9 @@ knitr::opts_chunk$set(
 ```
 
 <!-- badges: start -->
-  [![travis](https://travis-ci.com/kkholst/targeted.svg?branch=master)](https://travis-ci.com/kkholst/targeted)
-  [![coverage](https://codecov.io/github/kkholst/targeted/coverage.svg?branch=master)](https://app.codecov.io/github/kkholst/targeted?branch=master)
-  [![license](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](https://opensource.org/licenses/Apache-2.0)
+  [![travis](https://travis-ci.com/kkholst/targeted.svg?branch=main)](https://travis-ci.com/kkholst/targeted)
+  [![coverage](https://codecov.io/github/kkholst/targeted/coverage.svg?branch=main)](https://app.codecov.io/github/kkholst/targeted?branch=main)
+  [![license](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](https://opensource.org/licenses/apache-2.0)
   [![cran](https://www.r-pkg.org/badges/version-last-release/targeted)](https://cranlogs.r-pkg.org/downloads/total/last-month/targeted)
 <!-- badges: end -->
 
