--- a/R-package/targeted/README.Rmd
+++ b/R-package/targeted/README.Rmd
@@ -13,7 +13,8 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
   [![travis](https://travis-ci.com/kkholst/targeted.svg?branch=main)](https://travis-ci.com/kkholst/targeted)
   [![coverage](https://codecov.io/github/kkholst/targeted/coverage.svg?branch=main)](https://app.codecov.io/github/kkholst/targeted?branch=main)
-  [![license](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](https://opensource.org/license/apache-2-0)
+  [![license](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](
+  https://opensource.org/license/apache-2-0)
   [![cran](https://www.r-pkg.org/badges/version-last-release/targeted)](https://cranlogs.r-pkg.org/downloads/total/last-month/targeted)
 <!-- badges: end -->
 
